--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,8 @@
 RewriteEngine On
 RewriteRule ^accueil$ index.php [L]
 RewriteRule ^nos-services$ services.php [L]
+RewriteRule ^creations-web$ services-web.php [L]
+RewriteRule ^creations-audiovisuel$ services-audiovisuel.php [L]
 RewriteRule ^a-propos$ about.php [L]
 RewriteRule ^nos-creations$ portfolio.php [L]
 RewriteRule ^contact$ contact.php [L]
